# carbonGPT

./: .env.enc  Dockerfile  README.md  ansible.cfg  pyproject.toml  run.py
.devcontainer/: devcontainer.json  post_create.sh
carbongpt/: data_model.py  preprocess.py
data/: manual_labels.csv
data/extracted/: Knox et al., 2015.json  Rath et al., 2022.json  Villa et al., 2024.json  Wang et al., 2022.json
data/markdowns/: Knox et al., 2015.md  Rath et al., 2022.md  Villa et al., 2024.md  Wang et al., 2022.md
data/parsed/: Knox et al., 2015.json  Rath et al., 2022_v7.json  Villa et al., 2024.json  Villa et al., 2024_v2.json  Villa et al., 2024_v3.json  Villa et al., 2024_v4.json  Villa et al., 2024_v5.json  Wang et al., 2022.json  Wang et al., 2022_v5.json
notebooks/: proto1_openai_assistant_api_241004.ipynb  proto2_llamaparse_oai_structured_output_241004.ipynb  proto3_two_step_extract.ipynb  proto_openai_assistant_api.ipynb
proto_carbongpt/: data_model.py  main.py  parse.py
